--- a/.github/workflows/deploye_main.yml
+++ b/.github/workflows/deploye_main.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Install Surge
       run: npm install -g surge
     - name: Run Surge
-      run: surge ./ boutcampnewapp.sugre.sh --token ${{secret.SURGE_TOKEN}}
+      run: surge ./ boutcampnewapp.sugre.sh --token ${{secrets.SURGE_TOKEN}}
        
       
